Upgrade to spring boot 4 RC (Spring 7)
fix boot config automatic module on classpath

fix junit test issues: mock server locks, web server dynamic port

fix flatten dependency generated pom issues
see https://github.com/mojohaus/flatten-maven-plugin/pull/485